--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
             <nav>
                 <ul>
                     <li><a href="" class="hover-line">HOME</a></li>
-                    <li><a href="./blogs.html" class="hover-line">BLOGS</a></li>
+                    <li><a href="" class="hover-line">BLOGS</a></li>
                     <li><a href="./videos.html" class="hover-line">VIDEO</a></li>
                     <li><a href="" class="hover-line">BOOKS</a></li>
                     <li><a href="" class="hover-line">INCUBATE</a></li>
-                    <li id="signUpButtonListElem"><button type="button" id="signUpButton">Sign up for the newsletter!</button></li>
-                    
                 </ul>
             </nav>
             
@@ -176,9 +174,9 @@
                     <div class="emailID"><a href="mailto:eii@iitgn.ac.in" class="emailID">eii@iitgn.ac.in</a></div>
                     <div class="names">
                         <div class="sreevidya-name">Sreevidya Chintalapati</div>
-                        <div class="sreevidya-phone">+91 99999 99999</div>
-                        <div class="vaibhav-name">Vaibhav Saini</div>
-                        <div class="vaibhav-phone">+91 11111 11111</div>
+                                <div class="sreevidya-phone">+91 94911 53769</div>
+                                <div class="vaibhav-name">Vaibhav Saini</div>
+                                <div class="vaibhav-phone">+91 63776 80349</div>
                     </div>  
                 </div>
 
